--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "fastify": "^3.23.1",
     "fastify-autoload": "^3.9.0",
+    "fastify-static": "^4.5.0",
     "nodemon": "^2.0.14"
   }
 }
